Pagina-Web_Gary-Goodsped
Add home page.

--- a/public/css/style-home.css
+++ b/public/css/style-home.css
@@ -11,7 +11,7 @@ body{
 }
  
 
-/*------------------------NAV------------------------*/
+/*------------------------ NAV ------------------------*/
 .header {
     background-color: var(--bg-nav);
     height: var(--hnav);
