Pagina-Web_Gary-Goodsped
Massive Changes.

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -89,8 +89,8 @@
                             tener cada estudiante. Es
                             por eso que les
                             proporcionamos
-                            asistencia Psicologica
-                            y Medica.</h3>
+                            asistencia Psicológica
+                            y Médica.</h3>
                     </div>
                 </div>
             
