--- a/views/login.ejs
+++ b/views/login.ejs
@@ -26,7 +26,9 @@
       <div class="login">
         <div class="login-data">
           <h1>Bienvenido</h1>
-          <img src="resources/Assets/GG-corto.png" alt="" height="10%" width="10%" class="logo"/>
+          <a href="home">
+            <img src="resources/Assets/GG-corto.png" alt="" height="10%" width="10%" class="logo"/>
+          </a>
 
           <form action="/auth" method="post" class="form-login">
             <div class="login-form">
