--- a/views/student_home.ejs
+++ b/views/student_home.ejs
@@ -69,7 +69,6 @@ DOCTYPE html>
           <% if(login) { %>
             <span><%= name %></span>
             <% } %>
-          <span>Ayrton</span>
           <div class="icon-edit">
             <a href="#">
               <img class="EditIcon" src="resources/Assets/EditIcon.svg" alt="Edit Profile">
@@ -121,7 +120,7 @@ DOCTYPE html>
         <div class="item separator"></div>
 
         <div class="item close">
-          <a class="exitLink" href="#">
+          <a class="exitLink" href="login">
             <div class="icon">
               <img class="ExitIcon" src="resources/Assets/exit.png" alt="Cerrar Sesión" style="width: 25px;">
             </div>
@@ -359,6 +358,6 @@ DOCTYPE html>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js">
     
   </script>
-  <script src="resources/main.js"></script>
+  <script src="resources/js/main.js"></script>
   </body>
 </html>
