--- a/views/ADMIN-EditStudent.ejs
+++ b/views/ADMIN-EditStudent.ejs
@@ -67,7 +67,7 @@
         <!- ITEMS ->
         <div id="menu-items">
           <div class="item">
-            <a href="" id="Btn0">
+            <a href="Admin%Students" id="Btn0">
               <div class="icon first-icon">
                 <img src="resources/Assets/add-usr.png" alt="Materias">
               </div>
@@ -132,85 +132,7 @@
       </div>
     <!- Fin Menú Lateral Desplegable ->
 
-    <div class="AS-Home">
-      <h1>Home</h1>
-    </div>
-
-    <article class="AS-Add" id="AS-Add">
-        <div class="add-container">
-            <form action="/addStudent" method="post" class="form-add-s" >
-                <span class="Add-tittle">AGREGAR ALUMNO</span>
-                <div class="Add-t-container">
-                    <div class="Add-l-container">
-
-                        <div class="group-name">
-                            <span class="Add-span name-txt">Nombre:</span>
-                            <input class="add_name" name="add_name" type="text" placeholder="Ingrese el/los Nombres" required>
-                        </div>
-
-                        <div class="group-dni">
-                            <span class="Add-span dni-txt">DNI:</span>
-                            <input class="add_dni" name="add_dni" type="number" placeholder="Ingrese el DNI" required>
-                        </div>
-
-                        <div class="group-addres">
-                            <span class="Add-span addres-txt">Dirección:</span>
-                            <input class="add_addres" name="add_addres" type="text" placeholder="Ingrese la Dirección" required>
-                        </div>
-
-                        <div class="group-gender">
-                            <span class="Add-span gender-txt">Género:</span>
-                            <select name="add_gender" class="add_gender" id="add_gender">
-                                <option value="M">Masculino</option>
-                                <option value="F">Femenino</option>
-                            </select>
-                        </div>
-                    </div>
-
-                    <div class="Add-r-container">
-                        <div class="group-surname">
-                            <span class="Add-span surname-txt">Apellido:</span>
-                            <input class="add_surname" name="add_surname" type="text" placeholder="Ingrese el/los Apellidos" required>
-                        </div>
-
-                        <div class="group-date">
-                            <span class="Add-span date-txt">Fecha Nacimiento:</span>
-                            <input class="add_date" name="add_date" type="date" required>
-                        </div>
-
-                        <div class="AS-course">
-                            <div class="group-course">
-                                <span class="Add-span course-txt">Curso:</span>
-                                <select name="add_course" class="add_course" id="course-input">
-                                    <option value="1">Primer Año</option>
-                                    <option value="2">Segundo Año</option>
-                                    <option value="3">Tercer Año</option>
-                                    <option value="4">Cuarto Año</option>
-                                    <option value="5">Quinto Año</option>
-                                    <option value="6">Sexto Año</option>
-                                    <option value="7">Séptimo Año</option>
-                                </select>
-                                <span class="Add-span course-divition">División:</span>
-                                <select name="add_divition" class="add_divition" id="divition-input">
-                                    <option value="1">A</option>
-                                    <option value="2">B</option>
-                                    <option value="3">C</option>
-                                </select>
-                            </div>
-                            
-                        </div>
-                    </div>
-                </div>
-                <div class="Add-b-container">
-                    <input class="btn-cancel" type="button" value="Cancelar">
-                    <input class="btn-save" type="submit" value="Guardar">
-                </div>
-            </form>
-        </div>
-    </article>
-
-    <article class="AS-Edit" id="AS-Edit">
-      <div class="edit-container">
+    <div class="edit-container">
         <form action="#" class="form-edit-s">
             <span class="Edit-tittle">EDITAR ALUMNO</span>
             <div class="Edit-t-container">
@@ -278,81 +200,9 @@
                 <input class="btn-save" type="button" value="Guardar">
             </div>
         </form>
-    </article>
-
-    <article class="AS-Remove" id="AS-Remove">
-        <div class="remove-container">
-            <form action="#" class="form-edit-s">
-              <span class="Edit-tittle">ELIMINAR ALUMNO</span>
-              <div class="Edit-t-container">
-                  <div class="Edit-l-container">
-                      <div class="group-name">
-                          <span class="Edit-span name-txt">Nombre:</span>
-                          <input class="name-input" type="text" placeholder="Ingrese el/los Nombres" required>
-                      </div>
-
-                      <div class="group-dni">
-                          <span class="Edit-span dni-txt">DNI:</span>
-                          <input class="dni-input" type="number" placeholder="Ingrese el DNI" required>
-                      </div>
-
-                      <div class="group-addres">
-                          <span class="Edit-span addres-txt">Dirección:</span>
-                          <input class="addres-input" type="text" placeholder="Ingrese la Dirección" required>
-                      </div>
-
-                      <div class="group-gender">
-                          <span class="Edit-span gender-txt">Género:</span>
-                          <select name="Género" id="gender-input">
-                              <option value="M">Masculino</option>
-                              <option value="F">Femenino</option>
-                          </select>
-                      </div>
-                  </div>
-
-                  <div class="Edit-r-container">
-                      <div class="group-surname">
-                          <span class="Edit-span surname-txt">Apellido:</span>
-                          <input class="surname-input" type="text" placeholder="Ingrese el/los Apellidos" required>
-                      </div>
-
-                      <div class="group-date">
-                          <span class="Edit-span date-txt">Fecha Nacimiento:</span>
-                          <input class="date-input" type="date" required>
-                      </div>
-
-                      <div class="AS-course">
-                          <div class="group-course">
-                              <span class="Edit-span course-txt">Curso:</span>
-                              <select name="Curso" id="course-input" class="course-input">
-                                  <option value="Primer Año">Primer Año</option>
-                                  <option value="Segundo Año">Segundo Año</option>
-                                  <option value="Tercer Año">Tercer Año</option>
-                                  <option value="Cuarto Año">Cuarto Año</option>
-                                  <option value="Quinto Año">Quinto Año</option>
-                                  <option value="Sexto Año">Sexto Año</option>
-                                  <option value="Séptimo Año">Séptimo Año</option>
-                              </select>
-                              <span class="Edit-span course-divition">División:</span>
-                              <select name="División" id="divition-input">
-                                  <option value="A">A</option>
-                                  <option value="B">B</option>
-                                  <option value="C">C</option>
-                              </select>
-                          </div>
-                          
-                      </div>
-                  </div>
-              </div>
-              <div class="Edit-b-container">
-                  <input class="btn-cancel" type="button" value="Cancelar">
-                  <input class="btn-save" type="button" value="Guardar">
-              </div>
-          </form>
-        </div>
-    </article>
+    </div>
     <script src="resources/js/main.js"></script>
-
+    
     <% if(typeof alert != "undefined") { %>
       <script>
         Swal.fire({
