--- a/views/ADMIN-AddTeacher.ejs
+++ b/views/ADMIN-AddTeacher.ejs
@@ -134,7 +134,7 @@
 
     <div class="add-container">
         <form action="/addStudent" method="post" class="form-add-s" >
-            <span class="Add-tittle">AGREGAR ALUMNO</span>
+            <span class="Add-tittle">AGREGAR Profesor</span>
             <div class="Add-t-container">
                 <div class="Add-l-container">
 
