--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,7 +13,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
-    <!- Inicio del Header ->
+ 
     <header class="">
         <div class="heaader">
             <nav class="nav">
@@ -40,7 +40,7 @@
                 </li>
                 </ul>
             </nav>
-        <!- Fin del Header ->
+ 
     </div>
         <section class="textos-header">
             <h1>Bienvenid@ a nuestra pagina</h1>
@@ -107,33 +107,43 @@
             <div class="slider-frame">
                 <ul>
                     <li><img src="resources/Assets/Calen.jpg" alt=""></li>
-                    <li><img src="resources/Assets/CALENDARIO.jpg" alt=""></li>
-                    <li><img src="resources/Assets/Home-Calendario.jpg" alt=""></li>
-                    <li><img src="resources/Assets/Calen.jpg" alt=""></li>
+                    <li><img src="resources/Assets/Novedades - Tecnologia.jpg" alt=""></li>
+                    <li><img src="resources/Assets/Novedades - Servicios Tecnologicos.jpg" alt=""></li>
+                    <li><img src="resources/Assets/Novedades - Egresada.jpg" alt=""></li>
                 </ul>
             </div>
     </main>
     </section>
-    <footer>
-        <div class="contenedor-footer">
-            <div class="content-foo">
-                <h4>Phone</h4>
-                <p>23544354346</p>
-            </div>
+    <section id="sec3">
+        <div class="titlesec3">
+          <h4>Sobre Nosotros</h4>
         </div>
-        <div class="contenedor-footer">
-            <div class="content-foo">
-                <h4>Email</h4>
-                <p>23544354346</p>
-            </div>
+        <div class="content">
+          <div class="cont-left">
+            <h5>Contactanos:</h5>
+            <p>
+              Tel: 03516603455 <br>
+              Instagram <br>
+              FaceBook <br>
+              Gmail:</p>
+  
+          </div>
+          <div class="cont-center">
+            <h6>Ubicación</h6>
+            <p>
+              5186 - Alta Gracia, Córdoba, Argentina <br>
+              Urquiza 309 esq. Arz Castellanos
+            </p>
+          </div>
+          <div class="cont-right">
+            <p>
+              Relleno 1 <br>
+              Relleno 2
+            </p>
+          </div>
         </div>
-        <div class="contenedor-footer">
-            <div class="content-foo">
-                <h4>Location</h4>
-                <p>23544354346</p>
-            </div>
-        </div>
-        <h2 class="titulo-final">&copy; Nieto Facundo | Miotti Ayrton</h2>
-    </footer>
+        <div class="separator"> </div>
+        <p>Desarrolladores: <b>Miotti Ayrton</b> y <b>Nieto Facundo</b></p>
+      </section>
 </body>
 </html>
