--- a/views/login.ejs
+++ b/views/login.ejs
@@ -54,7 +54,7 @@
               <br>
               <div class="footer">
                 <div class="check_r" id="check_r">
-                  <input type="checkbox" id="remember"><label class="remember" for="remember"> Recordarme</label>
+                  <input method="" type="checkbox" id="remember" name="remember"><label class="remember" for="remember"> Recordarme</label>
                 </div>
                 <input type="submit" value="Ingresar" class="btn-login"/>
               </div>
