--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,8 @@
+:root{
+      --bg-fondo: #a945c7;
+    --bg-neon: #6c1aef;
+}
+
 body {
   font-family: 'Hanuman', serif;
   background-color: #0b0d2d;
@@ -73,10 +78,10 @@ body {
   border: none;
   border-bottom: 3px solid #848f9a;
   background-color: #E5EFFF;
-  width: 100%;
+  width: 95%;
   height: 2rem;
   font-size: 1.0625rem;
-  padding-left: 2rem;
+  padding-left: 2.4rem;
   line-height: 147.6%;
   padding-top: 1rem;
   padding-bottom: 0.5rem;
@@ -96,6 +101,16 @@ body {
 .input-fill input:focus + .input-label {
   top: 0;
   margin-bottom: 2rem;
+  color: #6c1aef;
+}
+
+.input-fill input:valid + .input-label{
+  top: 0;
+  margin-bottom: 2rem;
+  color: #6c1aef;
+}
+
+.input-fill input:valid + .input-label ~ i{
   color: #6c1aef;
 }
 
@@ -124,7 +139,7 @@ body {
 /* Icono de ojo para ver/ocultar contraseña */
 .eye{
   position: absolute;
-  right: 0;
+  right: 10px;
   color: black;
   padding-right: 6%;
   top: 14px;
@@ -137,7 +152,7 @@ body {
 .input-fill .eye {
   position: absolute;
   top: 2px;
-  right: 0;
+  right: 10px;
   bottom: 80%;
   line-height: 147.6%;
   color: #848f9a;
@@ -194,7 +209,7 @@ body {
   display: flex;
   float: right;
   align-items: center;
-  
+  justify-content: center;
 }
 
 /*Estilo del checkbox*/
@@ -203,14 +218,15 @@ body {
   align-items: center;
   left: 12%;
   font-size: 20px;
+  opacity: 0;
+  display: none;
 }
 
 /* Botón Iniciar Sesión*/
 .btn-login {
   display: block;
-  position: relative;
   border-radius: 10px;
-  width: 32%;
+  width: 72%;
   border: 1px solid #6c1aef;
   line-height: 1.6rem;
   font-size: 1.3rem;
@@ -221,7 +237,6 @@ body {
   font-weight: 500;
   margin-top: 10px;
   margin-bottom: 1%;
-  left: 35%;
 }
 .btn-login:hover {
   cursor: pointer;
