--- a/public/css/style-home.css
+++ b/public/css/style-home.css
@@ -10,7 +10,7 @@ body{
     color: #ffffff;
 }
  
-
+ 
 /*------------------------ NAV ------------------------*/
 .header {
     background-color: var(--bg-nav);
@@ -20,20 +20,20 @@ body{
     top: 0;
     left: 0;
 }
-
+ 
 .nav {
 display: flex;
 justify-content: space-between;
-
+ 
 max-width: 992px;
 margin: 0 auto;
 }
-
+ 
 .nav-link {
 color: white;
 text-decoration: none;
 }
-
+ 
 .logo {
 font-size: 30px;
 font-weight: bold;
@@ -41,7 +41,7 @@ padding: 0 40px;
 line-height: 80px;
 padding-top: 1.5%;
 }
-
+ 
 .logo-icon{
 width: 150px;
 height: 50px;
@@ -49,13 +49,13 @@ align-items: center;
 justify-content: center;
 vertical-align: middle
 }
-
+ 
 .nav-menu {
 display: flex;
 margin-right: 40px;
 list-style: none;
 }
-
+ 
 .nav-menu-item {
 font-size: 18px;
 margin: 0 10px;
@@ -63,12 +63,12 @@ line-height: 80px;
 text-transform: uppercase;
 width: max-content;
 }
-
+ 
 .nav-menu-link {
 padding: 8px 12px;
 border-radius: 3px;
 }
-
+ 
 .nav-menu-link:hover,
 .nav-menu-link_active {
 background-color: #034574;
@@ -251,7 +251,7 @@ header .textos-header{
 }
  
 .slider-frame {
-    width: 1280px;
+    width: auto;
     height: auto;
     margin:50px auto 0;
     overflow: hidden;
@@ -262,7 +262,7 @@ header .textos-header{
     padding: 0;
     width: 400%;
     
-    animation: slide 20s infinite alternate ease-in-out;
+    animation: slide 16s infinite alternate ease-in-out;
 }
  
 .slider-frame li {
@@ -286,4 +286,65 @@ header .textos-header{
     
     75% {margin-left: -300%;}
     100% {margin-left: -300%;}
+}
+ 
+/*footer*/
+ 
+#sec3{
+    background-color: #00040F;
+    height: 50vh; 
+    text-align: center;
+    padding-top: 20px;
+    color: var(--colorText);
+    align-items: center;
+  }
+  
+  h4{
+    padding-top: 60px;
+    font-size: 30px;
+  }
+  
+  .content{
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: space-between;
+    width: 80%;
+    margin: auto;
+  }
+  
+  .cont-left{
+    padding-left: 20px;
+    font-size: 20px;
+  }
+  
+  h5{
+    font-size: 20px;
+  }
+  
+  .cont-center{
+    font-size: 20px;
+  }
+  
+  h6{
+    font-size: 20px;
+    margin-top: 0;
+  }
+  
+  .cont-right{
+    padding-right: 40px;
+    font-size: 20px;
+  }
+  
+  .separator{
+    background-color: #fff;
+    height: 2px;
+    width: 80%;
+    padding: 0;
+    margin: 20px auto 0 auto;
+  }
+
+
+p{
+    padding-top: 5px;
 }
