Pagina-Web_Gary-Goodsped
Add new page

--- a/views/STUD-Califications.ejs
+++ b/views/STUD-Califications.ejs
@@ -58,7 +58,7 @@ DOCTYPE html>
             <span><%= name %></span>
             <% } %>
           <div class="icon-edit">
-            <a href="#">
+            <a href="profile">
               <img class="EditIcon" src="resources/Assets/EditIcon.svg" alt="Edit Profile">
             </a>
           </div>
