--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1533,8 +1533,6 @@ tbody tr:nth-child(2n+1) {
 }
 
 
-
-
 .AS-Remove{
   margin-top: var(--hnav);
   margin-left: 180px;
@@ -1545,3 +1543,81 @@ tbody tr:nth-child(2n+1) {
 }
 
 /* -------- MODIFY STUDENTS --------*/
+
+
+
+/*-------- EDIT PROFILE --------*/
+.ProfileBody{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
+.ProfileBody span{
+  color: white;
+}
+
+.Profile-title{
+  color: wheat;
+}
+
+.PEdit-form{
+  width: 100%;
+  height: 100%;
+  display: contents;
+}
+
+.profile-container{
+  background: #020E18;
+  border-radius: 50px;
+  height: 75%;
+  width: 50%;
+  margin-top: 20px;
+}
+
+.PU_image{
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  margin-bottom: 20px;
+  margin-top: 5px;
+}
+
+.PU_IP{
+  width: 30%;
+  height: 30%;
+  border-radius: 50%;
+}
+
+.Pcontainer-Inp{
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
+
+.PE-btnAct{
+  background: #020E18;
+  border: 1px solid #114EEB;
+  border-radius: 10px;
+  color: white;
+  height: 15%;
+  
+}
+
+.PE-btnCan{
+  background: #020E18;
+  border: 1px solid #114EEB;
+  border-radius: 10px;
+  color: white;
+  height: 15%;
+  
+}
